# fastapi-mcp

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py
app/middlewares/: timer.py
app/models/: user.py
app/routers/: api.py  mcp.py
app/schemas/: api.py  user.py
app/services/: user.py
